tests/__snapshots__/validation-configFile-syntax-unexpected-trailing-token.snap.txt
Error: Unexpected token.

  2 |   'failFast': true,
  3 | }
  4 | unexpected
    | ~
  5 | 

      at ./tstyche.config.json:4:1

